# Space_Invader_Pygame

./: .gitignore  README.md  ci-cd.yml  deploy.sh  login.py  main.py  package-lock.json  progress.js  pygbag.ini  pyproject.toml  space_invader.spec  staticwebapp.config.json
.github/workflows/: deploy.yml
docs/: proposal.md
landing/: index.html
tests/: test_game.py
