[project]
name = "space-invader-pygame"
version = "0.1.0"
description = "Space Invaders game built with Pygame, deployable as a web app via Pygbag"
requires-python = ">=3.11"
dependencies = [
    "pygame>=2.5.0",
]

[dependency-groups]
dev = [
    "pygbag>=0.9.2",
]

[tool.uv]
package = false

[tool.uv.scripts]
dev = "pygbag ."
build = "pygbag --build --disable-sound-format-error ."
